[package]
name = "votermatch"
version = "0.1.0"
authors = ["Schuyler Duveen <sky@skyb.us>"]
publish = false

[profile.release]
debug = 2

[dependencies]
sled = "0.15.17"
##
serde = "1.0"
serde_derive = "1.0"
docopt = "0.8"
chan-signal = "0.3"
rand = "0.4"
# sky's additions
# byteorder = "1"
byte-slice-cast = "0.2.0"
sorted = "0.2.0"
